# PargonGraphics

./: CMakeLists.txt  README.md
Dependencies/libpng/: CMakeLists.txt  Info.txt
Dependencies/libpng/Source/: pngpriv.h  pngrutil.c  pngwutil.c
Dependencies/zlib/: CMakeLists.txt  Info.txt
Include/Pargon/: Graphics.DirectX11.h  Graphics.h
Include/Pargon/Graphics/: Geometry.h  GraphicsDevice.h  GraphicsResource.h  Material.h  Renderer.h  Texture.h
Source/Core/: Geometry.cpp  GraphicsDevice.cpp  GraphicsResource.cpp  Material.cpp  Renderer.cpp  Texture.cpp
Source/DirectX11/: DirectX11Geometry.cpp  DirectX11Geometry.h  DirectX11Material.cpp  DirectX11Material.h  DirectX11Renderer.cpp  DirectX11Renderer.h  DirectX11Texture.cpp  DirectX11Texture.h
